--- a/test/fixtures/recipes.yml
+++ b/test/fixtures/recipes.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
-  ingredients: MyText
-  instructions: MyText
+  title: "Ice Cream"
+  ingredients: "3 scoops vanilla ice cream, chocolate syrup"
+  instructions: "Schoop ice cream into the bowl and pour chocolate syrup on top."
 
 two:
-  title: MyString
-  ingredients: MyText
-  instructions: MyText
+  title: "Toast"
+  ingredients: "bread, butter, jelly"
+  instructions: "Place bread in the toaster for 1 minute. Remove from toaster and apply butter to each piece."
