--- a/test/fixtures/recipes.yml
+++ b/test/fixtures/recipes.yml
@@ -4,8 +4,10 @@ one:
   title: "Ice Cream"
   ingredients: "3 scoops vanilla ice cream, chocolate syrup"
   instructions: "Schoop ice cream into the bowl and pour chocolate syrup on top."
+  category: "Snacks"
 
 two:
   title: "Toast"
   ingredients: "bread, butter, jelly"
   instructions: "Place bread in the toaster for 1 minute. Remove from toaster and apply butter to each piece."
+  category: "Breakfast"
